--- a/gravity-forms-view-entries.css
+++ b/gravity-forms-view-entries.css
@@ -1,3 +1,3 @@
-#gfve-entry-details .gfve-field-label { font-weight: bold; }
-#gfve-entry-details .gfve-field-label:after { content: ': '; }
+#gfve-entry-details .gfve-entry-field { margin-bottom: 10px; }
+#gfve-entry-details .gfve-field-label { display: block; font-weight: bold; }
 #gfve-entry-details .gfve-field-val + .gfve-field-val:before { content: ', '; }
